--- a/views/addUser.html
+++ b/views/addUser.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post" action="/user">
+    <form method="post" action="./user">
         fn<input id="first_name" name="first_name" value="jingo"></input>
         ln<input id="last_name" name="last_name" value="dingo"></input>
         age<input id="age" name="age" value="23"></input>
-        ac<input id="active" name="active" value="true"></input>
+        <!-- ac<input id="active" name="active" value="true"></input> -->
         <input type="submit" value="Submit"/>
     </form>
 </body>
